hphp/hack/test/typecheck/goto/goto_double_label.php
<?hh // partial

function test(): void {
  L0 L1:
}
